--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = mongodb://localhots/usuariosreg
+MONGODB_URI = mongodb+srv://Secretaria:VL6ccYLYNNYQ2N7o@cluster0.rekbb61.mongodb.net/Registro?retryWrites=true&w=majority
+
