--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2"
   },
