--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/google-map-react": "^2.1.7",
     "axios": "^1.4.0",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-pdf": "^7.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2"
