--- a/front/package.json
+++ b/front/package.json
@@ -18,8 +18,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pdf": "^7.1.1",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2"
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^6.11.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
