--- a/front/package.json
+++ b/front/package.json
@@ -20,7 +20,8 @@
     "react-pdf": "^7.1.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.11.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
