--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "react-pdf": "^7.1.1",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.11.2",
+    "react-select": "^5.7.5",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.16"
