--- a/front/package.json
+++ b/front/package.json
@@ -24,7 +24,8 @@
     "react-select": "^5.7.5",
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
-    "sweetalert2": "^11.7.16"
+    "sweetalert2": "^11.7.16",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
