--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@types/google-map-react": "^2.1.7",
     "axios": "^1.4.0",
     "immer": "^10.0.2",
+    "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
