--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/google-map-react": "^2.1.7",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "immer": "^10.0.2",
     "lodash": "^4.17.21",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-pdf": "^7.1.1",
